/**
 * Copyright 2020 Alibaba Group Holding Limited.
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 * http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package result;
option java_package = "com.alibaba.graphscope.gaia.proto";
option java_outer_classname = "IrResult";

import "common.proto";
import "expr.proto";

message Column {
  common.NameOrId name_or_id = 1;
  common.Value value = 2;
}

message Record {
  repeated Column columns = 1;
}

// TODO: more result kind?
message Result {
  oneof inner {
    Record record = 1;
  }
}