/**
 * Copyright 2020 Alibaba Group Holding Limited.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package schema;

option java_package = "com.alibaba.graphscope.gaia.proto";
option java_outer_classname = "Schema";

import "common.proto";

message ColumnKey {
  int32 id = 1;
  string name = 2;
  common.DataType dataType = 3;
}

message Entity {
  // label id
  int32 id  =  1;
  // label name
  string name = 2;
  repeated ColumnKey columns = 4;
}

message Relation {
  // source label id
  int32 src_id = 1;
  // source label name
  string src_name = 2;
  // destination label id
  int32 dst_id = 3;
  // destination label name
  string dst_name = 4;
  // edge label id
  int32 id = 5;
  // edge label name
  string name = 6;
  repeated ColumnKey columns = 7;
}

message Schema {
  // the entities (vertices)
  repeated Entity entities = 1;
  // the relations (edges)
  repeated Relation rels = 2;
  // is the table (label)'s name mapped as an id
  bool is_table_id = 3;
  // is the column (property)'s name mapped as an id
  bool is_column_id = 4;
}